--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 10 # amount of posts to show
 paginate_path: /page:num/
-timezone: Europe/Copenhagen
+timezone: 
 
 include:
   - _pages
