--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ remote_theme: mmistakes/minimal-mistakes
 permalink: /:categories/:title/
 paginate: 10 # amount of posts to show
 paginate_path: /page:num/
-timezone: 
+timezone: Europe/Copenhagen
 
 include:
   - _pages
@@ -64,7 +64,7 @@ twitter:
 author:
   name: "Péter Balázs Polgár"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "<i class="fas fa-drafting-compass"></i> Design explorer"
+  bio    : '<i class="fas fa-drafting-compass"></i> Design explorer'
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
