--- a/_config.yml
+++ b/_config.yml
@@ -58,9 +58,6 @@ plugins:
   - jemoji
   - jekyll-include-cache
 
-twitter:
-  username: "polgarp"
-
 author:
   name: "Péter Balázs Polgár"
   avatar : "/assets/images/bio-photo.jpg"
@@ -89,7 +86,7 @@ defaults:
       type: posts
     values:
       layout: single
-      author_profile: true
+      author_profile: false
       read_time: true
       comments: false
       share: true
@@ -100,7 +97,7 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
 
 category_archive:
   type: liquid
@@ -115,3 +112,6 @@ social:
   links:
     - "https://twitter.com/polgarp"
     - "https://linkedin.com/in/peterbalazspolgar"
+
+twitter:
+  username: "polgarp"
