Garden set up test

--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,14 @@ defaults:
     values:
       layout: single
       author_profile: false
+  # _garden
+  - scope:
+      path: ""
+      type: garden
+    values:
+      layout: single
+      author_profile: false
+      related: true
 
 category_archive:
   type: liquid
@@ -105,6 +113,12 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+
+collections:
+  garden:
+    output: true
+    permalink: /:collection/:path/
+
 
 social:
   type: "Person"
