--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
   - title: "Blog"
-    url: /categories/Blog/
+    url: /
   - title: "Tags"
     url: /tags/
   - title: "Garden"
-    url: /categories/Garden/
+    url: /categories/garden/
   - title: "About"
     url: /about/
