--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/peterbalazspolgar"
     - label: "Email"
-      icon: "fab fa-fw fa-envelope-o"
+      icon: "fas fa-envelope-o"
       url: "mailto:hello@polgarp.com"
 
 footer:
@@ -82,7 +82,7 @@ footer:
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/peterbalazspolgar"
     - label: "Email"
-      icon: "fab fa-fw fa-envelope-o"
+      icon: "fas fa-envelope-o"
       url: "mailto:hello@polgarp.com"
 
 defaults:
