--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: "polgarp - Thoughts after eleven"
 title_separator: "|"
-email:
+email: hello@polgarp.com
 description: >- # this means to ignore newlines until "baseurl:"
   "Design explorer."
 twitter_username: polgarp
@@ -24,6 +24,8 @@ minimal_mistakes_skin: "contrast"
 search: true
 search_full_content: true
 site.description: "Writings and others by Péter Balázs Polgár"
+logo: "/assets/images/logo.svg"
+
 
 # Build settings
 markdown: kramdown
