--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ minimal_mistakes_skin: "contrast"
 search: true
 search_full_content: true
 site.description: "Writings and others by Péter Balázs Polgár"
-logo: "/assets/images/logo.svg"
+logo: "/assets/images/logo.png"
 
 
 # Build settings
