Experience story newsletter issue done

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ _posts/.DS_Store
 _posts/9am26/.DS_Store
 _posts/9am26/.ztr-directory
 _posts/Blog/.ztr-directory
+_portfolio/.ztr-directory
+.DS_Store
