--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,11 +1,11 @@
 main:
-  - title: "Blog"
-    url: /
-  - title: "9am26"
-    url: /categories/newsletter/
-  - title: "Garden"
-    url: /categories/garden/
   - title: "About"
     url: /about/
+  - title: "Blog"
+    url: /
+  - title: "9am26 Newsletter"
+    url: /categories/newsletter/
   - title: "Tags"
     url: /tags/
+  - title: "Garden"
+    url: /categories/garden/
