--- a/_config.yml
+++ b/_config.yml
@@ -73,22 +73,22 @@ author:
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/peterbalazspolgar"
     - label: "Drop me an email"
-      icon: "fa-solid fa-envelope"
+      icon: "fas fa-solid fa-envelope"
       url: "mailto:hello@polgarp.com"
-    - label: "Subscribe to my newsletter"
-      icon: "fa-solid fa-wand-magic-sparkles"
+    - label: "My newsletter"
+      icon: "fas fa-magic"
       url: "https://polgarp.com/categories/newsletter/"
 
 footer:
   links:
     - label: "LinkedIn"
-      icon: "fab fa-fw fa-linkedin"
+      icon: "fab fa-fw fa-linkedin" 
       url: "https://linkedin.com/in/peterbalazspolgar"
     - label: "Drop me an email"
-      icon: "far fa-fw fa-envelope"
+      icon: "fas fa-solid fa-envelope"
       url: "mailto:hello@polgarp.com"
-    - label: "Subscribe to my newsletter"
-      icon: "fa-solid fa-wand-magic-sparkles"
+    - label: "My newsletter"
+      icon: "fas fa-magic"
       url: "https://polgarp.com/categories/newsletter/"
 
 defaults:
