--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,5 @@ main:
     url: /
   - title: "9am26 Newsletter"
     url: /categories/newsletter/
-  - title: "Tags"
-    url: /tags/
+#  - title: "Tags"
+#    url: /tags/
