--- a/_config.yml
+++ b/_config.yml
@@ -29,10 +29,26 @@ site.description: "Writings and others by Péter Balázs Polgár, Product Design
 logo: "/assets/images/logo.png"
 masthead_title: "Péter Balázs Polgár"
 
+# Comments
+
+repository: polgarp/polgarp.github.io
+
+comments:
+  provider: "giscus"
+  giscus:
+    repo_id              : MDEwOlJlcG9zaXRvcnkyNjMxNTQ0ODI= # Shown during giscus setup at https://giscus.app
+    category_name        : General # Full text name of the category
+    category_id          : DIC_kwDOD69rMs4CYXfz # Shown during giscus setup at https://giscus.app
+    discussion_term      : "pathname" # "pathname" (default), "url", "title", "og:title"
+    reactions_enabled    : 1 # '1' for enabled (default), '0' for disabled
+    theme                : "preferred_color_scheme" # "light" (default), "dark", "dark_dimmed", "transparent_dark", "preferred_color_scheme"
+   
+
 
 # Build settings
 markdown: kramdown
 remote_theme: mmistakes/minimal-mistakes
+
 # Outputting
 permalink: /:categories/:title/
 paginate: 50 # amount of posts to show
@@ -100,7 +116,7 @@ defaults:
       layout: single
       author_profile: false
       read_time: true
-      comments: false
+      comments: true
       share: true
       related: true
       show_date: true
