Update config - add Mastodon

--- a/_config.yml
+++ b/_config.yml
@@ -88,6 +88,9 @@ author:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin"
       url: "https://linkedin.com/in/peterbalazspolgar"
+    - label: "Mastodon"
+      icon: "fab fa-mastodon"
+      url: "https://mastodon.online/@polgarp"
     - label: "Drop me an email"
       icon: "fas fa-solid fa-envelope"
       url: "mailto:hello@polgarp.com"
@@ -100,6 +103,9 @@ footer:
     - label: "LinkedIn"
       icon: "fab fa-fw fa-linkedin" 
       url: "https://linkedin.com/in/peterbalazspolgar"
+    - label: "Mastodon"
+      icon: "fab fa-mastodon"
+      url: "https://mastodon.online/@polgarp"
     - label: "Drop me an email"
       icon: "fas fa-solid fa-envelope"
       url: "mailto:hello@polgarp.com"
