--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ github_username: polgarp
 minimal_mistakes_skin: "contrast"
 search: true
 search_full_content: true
-site.description: "Writings and others by Péter Balázs Polgár, Product Design Leader"
+site.description: "Ideas and Stuff by Péter Balázs Polgár, Product Design Leader"
 logo: "/assets/images/logo.png"
 masthead_title: "Péter Balázs Polgár"
 
