Remove sharing from pages

--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ defaults:
       author_profile: false
       read_time: true
       comments: true
-      share: true
+      share: false
       related: true
       show_date: true
   # _pages
