--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "Péter Balázs Polgár, Product Design Leader"
+title: "[P Péter Balázs Polgár, Product Design Leader"
 title_separator: "|"
 name: "Péter Balázs Polgár"
 url: "https://polgarp.com"
