--- a/_config.yml
+++ b/_config.yml
@@ -126,6 +126,7 @@ defaults:
       share: false
       related: true
       show_date: true
+      classes: wide
   # _pages
   - scope:
       path: "_pages"
@@ -133,6 +134,7 @@ defaults:
     values:
       layout: single
       author_profile: false
+      classes: wide
   # _portfolio
   - scope:
       path: ""
@@ -141,6 +143,7 @@ defaults:
       layout: single
       author_profile: false
       related: false
+      classes: wide
 
 category_archive:
   type: liquid
